2009-10-30  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Unreviewed layout test fixes.

        The existing excepted results were wrong, due to the visited links not
        being reset between tests.

        This was fixed in r50329, so updating the results.

        * platform/qt/fast/block/margin-collapse/block-inside-inline/010-expected.txt:
        * platform/qt/fast/block/margin-collapse/block-inside-inline/011-expected.txt:
        * platform/qt/fast/block/margin-collapse/block-inside-inline/012-expected.txt:
        * platform/qt/fast/block/margin-collapse/block-inside-inline/015-expected.txt:
        * platform/qt/fast/block/margin-collapse/block-inside-inline/016-expected.txt:
        * platform/qt/fast/block/margin-collapse/block-inside-inline/020-expected.txt:

2009-10-30  Andras Becsi  <becsi.andras@stud.u-szeged.hu>

        Reviewed by Holger Hans Peter Freyther.

        [Qt] Add expected files for new svg tests we pass.
        Compared to the Mac expected png files.

        * platform/qt/svg/css/arrow-with-shadow-expected.txt: Added.
        * platform/qt/svg/css/circle-in-mask-with-shadow-expected.txt: Added.
        * platform/qt/svg/css/clippath-with-shadow-expected.txt: Added.
        * platform/qt/svg/css/mask-with-shadow-expected.txt: Added.
        * platform/qt/svg/css/path-with-shadow-expected.txt: Added.
        * platform/qt/svg/css/stars-with-shadow-expected.txt: Added.
        * platform/qt/svg/filters/shadow-on-filter-expected.txt: Added.
        * platform/qt/svg/filters/shadow-on-rect-with-filter-expected.txt: Added.

2009-10-30  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Test that browser doesn't crash in case of stack overflow
        inside console.log()

        https://bugs.webkit.org/show_bug.cgi?id=30904

        * fast/dom/console-log-stack-overflow-expected.txt: Added.
        * fast/dom/console-log-stack-overflow.html: Added.
